# boop-snoot

./: LICENSE  README.md  boop-icon.xcf  boop.config.json  index.html  package-lock.json  package.json
.github/workflows/: publish.yml
src/: App.tsx  app.css  connection.tsx  fonts.css  index.tsx  indicator.tsx  main.css  notifications.ts  settings.tsx  spacer.tsx  style.settings.css
src-tauri/: .gitignore  Cargo.toml  rustfmt.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  files.rs  main.rs  message.rs  network.rs  partners.rs  window_titles.rs
src/eventLog/: event_log.tsx  log_context.tsx  log_element.css  log_element.tsx
src/indicator/: indicator.css  indicator.tsx
src/partners/: booptimers.tsx  partner_row.css  partner_row.tsx  partners_list.css  partners_list.tsx  partners_update_lock.tsx
src/settings/: settings.css  settings.tsx
