[package]
name = "boop-snoot"
version = "0.1.0"
description = "The frontend client for booping someone"
authors = ["iyoshok"]
license = "MIT"
repository = ""
default-run = "boop-snoot"
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.0-rc.9", features = [] }

[dependencies]
serde_json = "1.0"
tokio = { version = "1.18.2", features = [ "full" ] }
tokio-rustls = "0.23.4"
rustls = "0.20.6"
rustls-native-certs = "0.6.2"
rustls-pemfile = "1.0.0"
log = "0.4.17"
flexi_logger = { version = "0.22.3" }
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.0-rc.13", features = ["notification-all", "window-close", "window-set-title"] }
webpki = "0.22.0"
rand = "0.8.5"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
